fixed repeated paragraph and ugly whitespace in footer

--- a/permanent/style.css
+++ b/permanent/style.css
@@ -153,7 +153,7 @@ header {
 footer {
 	background-color: #f4f4f4;
 	border-top: 1px solid #bbb;
-	padding: 0 1em;
+	padding: 1px 1em;
 	margin-bottom: 0;
 }
 
